// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders date correctly with date string 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 6,
        "paddingVertical": 3,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#333",
          "fontSize": 12,
        },
        undefined,
      ]
    }
  >
    Sat, May 4, 2019 4:48 PM
  </Text>
</View>
`;

exports[`renders date correctly with date string and optional style 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 6,
        "paddingVertical": 3,
      },
      Object {
        "margin": 2,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#333",
          "fontSize": 12,
        },
        undefined,
      ]
    }
  >
    Sat, May 4, 2019 4:48 PM
  </Text>
</View>
`;

exports[`renders date correctly with date string and optional styleText 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 6,
        "paddingVertical": 3,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#333",
          "fontSize": 12,
        },
        Object {
          "fontSize": 14,
        },
      ]
    }
  >
    Sat, May 4, 2019 4:48 PM
  </Text>
</View>
`;
